# libduan

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Gemfile  INVARIANTS.md  LICENSE  README.md  README_GEM.md  Rakefile  action.sh  bmssp.gemspec  package-lock.json  package.json  todo.md
.github/workflows/: ci.yml
examples/: basic_usage.rb
ext/bmssp/: base_case.cpp  bmssp.cpp  bmssp_ext.cpp  bmssp_state.cpp  extconf.rb  find_pivots.cpp  instrumentation.cpp  structure.cpp
include/: mimalloc_force.h
include/cpp_starter/: bmssp.hpp  jemalloc_allocator.hpp  lib.hpp  mimalloc_allocator.hpp
include/cpp_starter/bmssp/: base_case.hpp  bmssp.hpp  degree_check.hpp  find_pivots.hpp  graph.hpp  instrumentation.hpp  state.hpp  structure.hpp  verify.hpp
legacy/: legacy_prototype_bmssp.cpp.removed
lib/: bmssp.rb  bmssp.rb.bak
lib/bmssp/: version.rb
pkg/: bmssp-0.1.0.gem
src/: base_case.cpp  bmssp.cpp  bmssp_algo.cpp  bmssp_state.cpp  degree_check.cpp  find_pivots.cpp  jemalloc_diag.cpp  jemalloc_new_delete.cpp  legacy_prototype_bmssp.cpp  lib.cpp  main.cpp  mimalloc_init.cpp  mimalloc_new_delete.cpp  structure.cpp
test/: bmssp_test.rb  test_helper.rb
tests/: base_case_test.cpp  bigint_relax_test.cpp  boundary_invariants_test.cpp  degree_check_test.cpp  driver_test.cpp  find_pivots_test.cpp  instrumentation_test.cpp  lib_test.cpp  partial_execution_test.cpp  performance_test.cpp  recursion_against_dijkstra_test.cpp  sssp_driver_test.cpp  structure_test.cpp  tie_breaking_test.cpp  widen_bench_test.cpp
tmp/arm64-darwin24/bmssp_ext/3.4.1/: Makefile  bmssp_ext.bundle
tmp/arm64-darwin24/bmssp_ext/3.4.1/bmssp_ext.bundle.dSYM/Contents/: Info.plist
tmp/arm64-darwin24/bmssp_ext/3.4.1/bmssp_ext.bundle.dSYM/Contents/Resources/DWARF/: bmssp_ext.bundle
tmp/arm64-darwin24/bmssp_ext/3.4.1/bmssp_ext.bundle.dSYM/Contents/Resources/Relocations/aarch64/: bmssp_ext.bundle.yml
